# expert-dollop

./: .env.example  .gitignore  DOCKER.md  DOCKER_INVENTORY.md  DOCKER_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  FEEDBACK_RESPONSE.md  INFRASTRUCTURE.md  Makefile  README.md  docker-compose-models.yml  docker-compose.yml  docker-compose.yml.backup  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  update_paths.sh  validate-docker.sh
.github/workflows/: codeql.yml  codeql2.yml  ethicalcheck.yml  n8n-integration-tests.yml
apps/ai/: CONSOLIDATION_ANALYSIS.md  CONSOLIDATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README-FIRECRAWL.md
apps/ai/goose-extensions/: .gitignore  Cargo.toml  README.md  build.rs  package.json
apps/ai/goose-extensions/src/: lib.rs
apps/ai/goose-extensions/src/n8n_native/: mod.rs
apps/ai/goose/api-server/: Cargo.toml  README.md
apps/ai/goose/api-server/src/: handlers.rs  main.rs  types.rs
apps/security/: README.md
apps/tcg/spellbook/commander_map/: README.md  __init__.py  pyproject.toml
apps/tcg/spellbook/commander_map/adapters/: __init__.py  legacy_adapter.py
apps/tcg/spellbook/commander_map/application/: __init__.py
apps/tcg/spellbook/commander_map/application/dto/: __init__.py  cluster_dto.py  deck_dto.py  map_export_dto.py
apps/tcg/spellbook/commander_map/application/services/: __init__.py  data_loading_service.py  map_generation_service.py  submap_generation_service.py
apps/tcg/spellbook/commander_map/domain/: __init__.py
apps/tcg/spellbook/commander_map/domain/entities/: __init__.py  commander_deck.py  commander_map.py
apps/tcg/spellbook/commander_map/domain/services/: __init__.py  card_service.py  cluster_analysis_service.py  clustering_service.py  companion_service.py  deck_formatter.py  dimensionality_reduction_service.py  export_service.py  trait_mapping_service.py  url_extraction_service.py
apps/tcg/spellbook/commander_map/domain/value_objects/: __init__.py  card_type.py  color_identity.py
apps/tcg/spellbook/commander_map/infrastructure/: __init__.py
apps/tcg/spellbook/commander_map/infrastructure/repositories/: __init__.py  card_repository.py  deck_repository.py  map_export_repository.py
backend/api/: README.md
backend/auth/: README.md  index.ts
docs/: AI_ARCHITECTURE_ANALYSIS.md  AI_CODE_DISCOVERY_REPORT.md  DEEP-CODE-INTEGRATION-SUMMARY.md  DIRECT-CODE-REUSE.md  FIRECRAWL_MIGRATION.md  GOOSE-INTEGRATION-SUMMARY.md  IMPLEMENTATION-COMPLETE.md  INTEGRATION-INDEX.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE1_STATUS.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_STATUS.md  ROOT-MONOREPO-IMPLEMENTATION.md  SECURITY_AI_INTEGRATION.md  SESSION_3_HANDOFF.md  TEST_RESULTS_SESSION_9.md  additional-integration-points.md  code-integration-examples.md  code-level-integration.md  goose-integration-manifest.md  goose-integration.md  goose-known-issues.md  goose-phase5-complete-migration.md  goose-quick-reference.md  goose-strangler-fig-completion.md  integration-implementation-summary.md  integration-quick-reference.md  system-level-integration-architecture.md
docs/dev notes/: devnote.md  what do i call it.md
docs/enumeration/: README.md  deep-tech-stack-analysis.md  docker-compose-services-report.md  dockerfile-command-analysis.md  service-configuration-matrix.md
docs/feature integration/: GOOSE-INTEGRATION-SUMMARY.md  goose-integration-manifest.md  goose-integration.md  goose-phase2-shared-abstractions.md  goose-phase3-dapr-integration.md  goose-phase4-frontend-integration.md  goose-security-summary.md  n8n-goose-integration.md  n8n-integration-manifest.md
docs/ideal/: file-directory-layout.md  theoretical architecture.md
docs/regression-test/: TEST-RESULTS-REPORT.md  TESTING-SUMMARY.md  n8n-integration-testing-progress.md  n8n-migration-regression-test-report.md  test-results.json
features/: repos.sh
features/FileScopeMCP/: .gitignore  FileScopeMCP-diagram.html  FileScopeMCP-excludes.json  README.md  build.bat  build.sh  config.json  mcp.json.linux  mcp.json.mac  mcp.json.win.txt  package.json  tsconfig.json  vitest.config.ts
infrastructure/: README.md
libs/n8n/: README.md
libs/shared/python/: README.md  __init__.py  pyproject.toml
libs/shared/python/ddd/: __init__.py
libs/shared/python/ddd/entities/: __init__.py  base.py
libs/shared/python/ddd/repositories/: __init__.py  base.py
libs/shared/python/ddd/services/: __init__.py  base.py
omninexus/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
(+1539 files in other folders)
